--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
     "extends": ["config:recommended", ":disableDependencyDashboard"],
+    "updateInterval": "daily",
     "packageRules": [
       {
         "matchManagers": ["helm-values"],
@@ -11,7 +12,6 @@
         "matchUpdateTypes": ["patch"],
         "prCreation": "immediate",
         "bumpVersion": "patch",
-        "groupName": "Patch Updates",
         "ignoreTests": true
       },
       {
@@ -21,7 +21,6 @@
         "automerge": false,
         "matchUpdateTypes": ["minor", "major"],
         "prCreation": "immediate",
-        "groupName": "Minor and Major Updates",
         "ignoreTests": true
       },
       {
@@ -30,7 +29,6 @@
         "enabled": true,
         "automerge": false,
         "prCreation": "immediate",
-        "groupName": "Helm Chart Updates",
         "ignoreTests": true
       }
     ]
