--- a/charts/servarr/values.yaml
+++ b/charts/servarr/values.yaml
@@ -264,7 +264,7 @@ byparr:
   replicaCount: 1
   image:
     repository: ghcr.io/thephaseless/byparr
-    tag: "v1.1.2"
+    tag: "1.2.0"
   env:
     - name: TZ
       value: "Europe/Paris"
