--- a/charts/homepage/templates/serviceaccount.yaml
+++ b/charts/homepage/templates/serviceaccount.yaml
@@ -2,10 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "homepage.serviceAccountName" . }}
+  name: homepage
   labels:
     {{- include "homepage.labels" . | nindent 4 }}
 secrets:
   - name: homepage
-    namespace: {{ .Release.Namespace }}
 {{- end }}
