--- a/charts/homepage/templates/serviceaccount.yaml
+++ b/charts/homepage/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: homepage
+  name: {{ include "homepage.serviceAccountName" . }}
   labels:
     {{- include "homepage.labels" . | nindent 4 }}
 secrets:
