[home page] new fix

--- a/charts/homepage/templates/rbac.yaml
+++ b/charts/homepage/templates/rbac.yaml
@@ -58,3 +58,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: {{ include "homepage.serviceAccountName" . }}
+    namespace: {{ .Release.Namespace }}
