--- a/charts/homepage/templates/secret.yaml
+++ b/charts/homepage/templates/secret.yaml
@@ -4,6 +4,7 @@ kind: Secret
 type: kubernetes.io/service-account-token
 metadata:
   name: homepage
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "homepage.labels" . | nindent 4 }}
   annotations:
