--- a/charts/commons/tests/deployment_test.yaml
+++ b/charts/commons/tests/deployment_test.yaml
@@ -1,6 +1,6 @@
 suite: Full values.yaml test suite
 templates:
-  - templates/_deployment.yaml
+  - templates/deployment.yaml
 
 tests:
   ### COMPONENT: WEB DEPLOYMENT ###
