--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -18,7 +18,8 @@ spec:
       labels:
         app: {{ $component.name }}
     spec:
-      {{- if $component.initContainers.containers }}
+      {{- with $component.initContainers }}
+      {{- if .containers }}
       initContainers:
         {{- if $.Values.addons.redis.enable }}
         {{ include "commons.redisInitContainer" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component) | indent 8 }}
@@ -56,6 +57,7 @@ spec:
             {{- end }}
           {{- end }}
         {{- end }}
+      {{- end }}
       {{- end }}
 
       containers:
