--- a/charts/commons/templates/addons/cnpg/secret.yaml
+++ b/charts/commons/templates/addons/cnpg/secret.yaml
@@ -1,8 +1,8 @@
 {{- if .Values.addons.postgres.enabled }}
 apiVersion: v1
 data:
-  username: {{ .Values.addons.postgresql.cluster.owner | b64enc | quote }}
-  password: {{ .Values.addons.postgresql.cluster.password | b64enc | quote }}
+  username: {{ .Values.addons.postgres.cluster.username | b64enc | quote }}
+  password: {{ .Values.addons.postgres.cluster.password | b64enc | quote }}
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-postgres-secret
