--- a/charts/commons/templates/addons/redis/secret.yaml
+++ b/charts/commons/templates/addons/redis/secret.yaml
@@ -1,4 +1,4 @@
-{{- $enabled := .Values.addons.redis.enable }}
+{{- $enabled := .Values.addons.redis.enabled }}
 {{- $hasSecret := .Values.addons.redis.existingSecret }}
 {{- $password := .Values.addons.redis.password | default "" }}
 
