--- a/charts/commons/templates/cnpg/secret.yaml
+++ b/charts/commons/templates/cnpg/secret.yaml
@@ -6,10 +6,10 @@
 apiVersion: v1
 data:
   username: {{ .cluster.username | b64enc | quote }}
-  password: {{ postgres.cluster.password | b64enc | quote }}
+  password: {{ .cluster.password | b64enc | quote }}
 kind: Secret
 metadata:
-  name: {{ $Release.Name }}-postgres-secret
+  name: {{ $.Release.Name }}-postgres-secret
 type: kubernetes.io/basic-auth
 ---
 {{- end }}
