--- a/charts/commons/templates/cnpg/cluster.yaml
+++ b/charts/commons/templates/cnpg/cluster.yaml
@@ -16,14 +16,15 @@ spec:
     parameters:
       timezone: {{ $.Values.timezone | default "Europe/Paris" | quote }}
 
+  {{- with .resources }}
   resources:
     requests:
-      cpu: {{ .resources.requests.cpu | default "500m" }}
-      memory: {{ .resources.requests.memory | default "512Mi" }}
+      cpu: {{ .requests.cpu | default "500m" }}
+      memory: {{ .requests.memory | default "512Mi" }}
     limits:
-      cpu: {{ .resources.limits.cpu | default "1" }}
-      memory: {{ .resources.limits.memory | default "1Gi" }}
-
+      cpu: {{ .limits.cpu | default "1" }}
+      memory: {{ .limits.memory | default "1Gi" }}
+  {{- end }}
   storage:
     size: {{ .storage.size | default "5Gi" }}
     storageClass: {{ .storage.storageClass | default "standard" }}
