--- a/charts/commons/templates/cnpg/cluster.yaml
+++ b/charts/commons/templates/cnpg/cluster.yaml
@@ -22,11 +22,11 @@ spec:
   {{- end }}
   {{- with .storage }}
   storage:
-    size: {{ .size | default .Values.global.postgres.size }}
-    storageClass: {{ .storageClass | default .Values.global.postgres.storageClass }}
+    size: {{ .size | default $.Values.global.postgres.size }}
+    storageClass: {{ .storageClass | default $.Values.global.postgres.storageClass }}
   {{- end }}
 
-  imageName: {{ .image | default .Values.global.postgres.image.repository }}:{{ .tag | default .Values.global.postgres.image.tag }}
+  imageName: {{ .image | default $.Values.global.postgres.image.repository }}:{{ .tag | default $.Values.global.postgres.image.tag }}
 
   bootstrap:
     initdb:
