--- a/charts/commons/values.yaml
+++ b/charts/commons/values.yaml
@@ -99,12 +99,16 @@ components:
 addons:
   vscode:
     enabled: true
+    image:
+      repository: codercom/code-server
+      tag: 39
+    port: 8080
   redis:
     enabled: true
     name: redis
     image:
       repository: bitnami/redis
-      tag: latest
+      tag: 8.2.1
     port: 6379
     password: changeme
     resources:
