--- a/charts/commons/values.yaml
+++ b/charts/commons/values.yaml
@@ -20,10 +20,13 @@ components:
       initContainers:
         containers:
           - name: setup-volume
-            image: alpine
+            image:
+              repository: alpine
             command: ['sh', '-c', 'mkdir -p /data/init']
       name: nginx
-      image: nginx:stable
+      image: 
+        repository: nginx
+        tag: latest
       ports:
         - name: http
           containerPort: 80
