--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
         {{- if $.Values.addons.redis.enabled }}
         {{ include "commons.redisInitContainer" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component) | indent 8 }}
         {{- end }}
-        {{- if $.Values.addons.postgres.enabled }}
+        {{- if $component.deployment.postgres.enabled }}
         {{ include "commons.waitForPostgres" dict | indent 8 }}
         {{- end }}
         {{- range $component.initContainers }}
