--- a/charts/commons/templates/cnpg/secret.yaml
+++ b/charts/commons/templates/cnpg/secret.yaml
@@ -2,7 +2,7 @@
 {{- range $components }}
 {{- $component := . }}
 {{- with $component.postgres }}
-{{- range . }}
+{{- if .enabled }}
 apiVersion: v1
 data:
   username: {{ .cluster.username | b64enc | quote }}
