--- a/charts/commons/templates/cnpg/init-sql.yaml
+++ b/charts/commons/templates/cnpg/init-sql.yaml
@@ -7,9 +7,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ . }}
+  name: {{ $.Release.Name }}-postgres
 data:
   init.sql: |
+    echo "toto"
 ---
 {{- end }}
 {{- end }}
